force-app/main/default/objects/Campaign/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Builders - Single Family</fullName>
            </value>
            <value>
                <fullName>Builders - Multifamily</fullName>
            </value>
            <value>
                <fullName>Builders - Developers/ General Contractors/ Remodelers</fullName>
            </value>
            <value>
                <fullName>Property Managers - Residential</fullName>
            </value>
            <value>
                <fullName>Property Managers - Commercial</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Top Geography Markets</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Government/Education/Non-profit</fullName>
            </value>
            <value>
                <fullName>Bosch/Frigidaire</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Tier Upgrade</fullName>
            </value>
            <value>
                <fullName>Inside Sales Team</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>House Accounts</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>