force-app/main/default/objects/Campaign/fields/List_Source__c.field-meta.xml
<CustomField>
    <fullName>List_Source__c</fullName>
    <label>List Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Member Technology</fullName>
            </value>
            <value>
                <fullName>Associated Member List</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>CMD</fullName>
            </value>
            <value>
                <fullName>Attendee List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>