force-app/main/default/objects/Campaign/fields/Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Natural Search</fullName>
            </value>
            <value>
                <fullName>Online Display</fullName>
            </value>
            <value>
                <fullName>Other Offline (Capture it All Bucket)</fullName>
            </value>
            <value>
                <fullName>Self Generated/Misc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>