force-app/main/default/objects/Campaign/fields/Offer_Message__c.field-meta.xml
<CustomField>
    <fullName>Offer_Message__c</fullName>
    <label>Offer/Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>