force-app/main/default/objects/Campaign/listViews/Weekly_Allotment_View.listView-meta.xml
<ListView>
    <fullName>Weekly_Allotment_View</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>IST-AR Leads 11/20/2017</value>
    </filters>
    <label>Weekly Allotment View</label>
</ListView>